--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Projet Fábrica de Software</h1>
+    <h3 th:text="${apelido}"></h3>
+    <h3 th:text="${nome}"></h3>
     
 </body>
 </html>
