--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Projet Fábrica de Software</h1>
+    <h1>Projeto Fábrica de Software</h1>
     <h3 th:text="${apelido}"></h3>
     <h3 th:text="${nome}"></h3>
     
