--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -10,6 +10,25 @@
     <h1>Projeto Fábrica de Software</h1>
     <h3 th:text="${apelido}"></h3>
     <h3 th:text="${nome}"></h3>
+
+    <h3 th:text="${dataNascimento}"></h3>
+    <h3 th:text="${dataNascimento}"></h3>
+
+    <h3 th:text="${endereco}"></h3>
+    <h3 th:text="${endereco}"></h3>
+
+    <h3 th:text="${telefone}"></h3>
+    <h3 th:text="${telefone}"></h3>
+
+    <h3 th:text="${email}"></h3>
+    <h3 th:text="${email}"></h3>
+
+
+
+    
+
+
+
     
 </body>
 </html>
