--- a/src/main/resources/templates/carro/index.html
+++ b/src/main/resources/templates/carro/index.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
-     lang="en">
+     lang="pt">
 
     <head th:include="layout :: htmlhead"></head>
 
     <body>
 
-<!-- Cliente -->
+<!-- Carro -->
 
       <nav th:replace="layout :: menu">(menu)</nav>
         <main class="container">
-            <a th:href="@{/cliente/novo}" class="btn btn-primary">Novo</a>
+            <a th:href="@{/carro/novo}" class="btn btn-primary">Novo</a>
             <table class="table" id="tabclientes">
                 <thead>
                     <tr>
-                        <th>Nome</th>
-                        <th>Data de Nascimento</th>
-                        <th>Endereço</th>
-                        <th>Cidade</th>
-                        <th>Telefone</th>
-                        <th>E-mail</th>
-                        <th></th>
-                    </tr>
+                        <th>Marca</th>
+                        <th>Modelo</th>
+                        <th>Ano</th>
+                        <th>Placa</th>
 
+<!--                        <th>Cor</th>
+                        <th></th>
+-->
+
+                    </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="umCliente : ${listaClientes}">
-                        <td th:text="${umCliente.nome}"></td>
-                        <td th:text="${#dates.format(umCliente.dataNascimento, 'dd-MM-yyyy')}"></td>
-                        <td th:text="${umCliente.endereco}"></td>
-                        <td th:text="${umCliente.cidade}"></td>
-                        <td th:text="${umCliente.telefone}"></td>
-                        <td th:text="${umCliente.email}"></td>
+                    <tr th:each="umCarro : ${listaCarros}">
+                        <td th:text="${umCarro.marca}"></td>
+                        <td th:text="${umCarro.modelo}"></td>
+                        <td th:text="${#dates.format(umCarro.ano, 'dd-MM-yyyy')}"></td>
+                        <td th:text="${umCarro.placa}"></td>
                         <td><a class="btn btn-secondary"
-                            th:href="@{'/cliente/alterar/' + ${umCliente.id}}">Alterar</a>
+                            th:href="@{'/carro/alterar/' + ${umCarro.id}}">Alterar</a>
                             <button class="btn btn-danger js-delete"
-                                th:data-id="${umCliente.id}">
+                                th:data-id="${umCarro.id}">
                                 Excluir
                             </button>
                         </td>
@@ -45,15 +44,15 @@
             </table>
         </main>
 
-        <div class="modal" tabindex="-1" id="modalcliente">
+        <div class="modal" tabindex="-1" id="modalcarro">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">Excluir cliente</h5>
+                  <h5 class="modal-title">Excluir carro</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <p>Confirma a exlusão do cliente</p>
+                  <p>Confirma a exlusão do carro</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" id="btnnao" data-bs-dismiss="modal">Não</button>
@@ -66,7 +65,5 @@
 
         <div th:include="layout :: footer">(footer)</div>
         <script th:src="@{/script.js}"></script>
-
-
     </body>
 </html>
