--- a/src/main/resources/templates/cliente/form.html
+++ b/src/main/resources/templates/cliente/form.html
@@ -11,6 +11,9 @@
             <form th:action="@{/cliente/(form)}"
                 method="POST"
                 th:object="${cliente}">
+
+                <input type="hidden" th:field="*{id}">
+
                 <div class="form=group">
                     <label for="txtNome">Nome</label>
                     <input type="text" class="form-control"
@@ -19,11 +22,43 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="txtData">Data de Nascimento</label>
+                    <input type="date" class="form-control"
+                        th:field="*{dataNascimento}" id="txtData">
+                </div>
+            
+
+            <div class="form-group">
+                <label for="txtEndereco">Endereço</label>
+                <input type="text" class="form-control"
+                    th:field="*{endereco}" id="txtEndereco">
+            </div>
+
+            <div class="form-group">
+                <label for="txtCidade">Cidade</label>
+                <input type="text" class="form-control"
+                    th:field="*{cidade}" id="txtCidade">
+            </div>
+
+            <div class="form-group">
+                <label for="txtTelefone">Telefone</label>
+                <input type="number" class="form-control"
+                    th:field="*{telefone}" id="txtTelefone">
+            </div>
+
+            <div class="form-group">
+                <label for="txtEmail">Email</label>
+                <input type="text" class="form-control"
+                    th:field="*{email}" id="txtEmail">
+            </div>
+
+                
+
+                <div class="form-group">
                     <button type="submit" class="btn btn-primary">
                         Enviar
                     </button>
                 </div>
-
 
             </form>
 
