--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,6 +19,23 @@
                   </li>
                 </ul>
             </div>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/cliente">Cliente</a>
+                  </li>
+                </ul>
+            </div>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/carro">Carro</a>
+                  </li>
+                </ul>
+            </div>
+
         </nav>
          
         <div th:fragment="footer" id="footer">
